update to fix db architecture

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,18 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 # Because detection is disabled you have to set correct dialect by hand.
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 
-spring.datasource.url=jdbc:postgresql://localhost/userdb
+spring.datasource.url=jdbc:postgresql://localhost/userdb2
 spring.datasource.username=useradmin
 spring.datasource.password=${env:USER_SERVICE_DB_PASSWORD}
 
-log4j.logger.org.springframework.jdbc.core.JdbcTemplate=DEBUG, file
-log4j.logger.org.springframework.jdbc.core.StatementCreatorUtils=TRACE, file
+# Root logger option
+log4j.rootLogger=DEBUG, stdout
+
+# Direct log messages to stdout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+log4j.logger.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+log4j.logger.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
